# Real-Time-Ray-Tracing

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
ext/: ArHosekSkyModelData_CIEXYZ.h
log/: aabbs.csv  bvhNodes.csv  morton.csv  morton2.csv  reorderIdx.csv  sceneBoundingBox.csv  triangles.csv
profile/: 3-17-2021.ncu-rep
resources/: config.toml
resources/models/: test.dae
resources/models/roundcubes/: 1.fbx  10.fbx  11.fbx  12.fbx  13.fbx  14.fbx  2.fbx  3.fbx  4.fbx  5.fbx  6.fbx  7.fbx  8.fbx  9.fbx
resources/shaders/: .gitignore  compile.bat  tri.frag  tri.frag.spv  tri.vert  tri.vert.spv
resources/textures/soil/: convertFormat.bat
src/: ArHosekSkyModelData_RGB.h  blueNoiseRandGen.h  blueNoiseRandGenData.h  bsdf.cuh  buildBVH.cuh  bvh.cu  bvhNode.cuh  color.h  common.cuh  configLoader.cpp  configLoader.h  cudaError.cuh  debugUtil.h  debug_util.cuh  denoise.cuh  denoising.cu  fileUtils.cu  fileUtils.cuh  fp16Utils.cuh  gaussian.cuh  geometry.cuh  geometry.h  globalSettings.h  hash.cuh  init.cu  inputControl.cu  kernel.cu  kernel.cuh  light.cuh  linearMath.h  linear_math.h  linmath.h  main.cu  marchingCubes.cpp  mesh.cpp  mesh.h  meshedit.cpp  meshing.cpp  meshing.h  mipgen.cu  (+35 more)
test/: CMakeLists.txt  testCommon.h
test/scan/: main.cu
tool/: 5x5x5samples.txt  7x7x7samples.txt  equalareal.py  haltonSequence.py  meshProcessor.cpp
tool/SkyData/: SkyData.sln  SkyData.vcxproj  SkyData.vcxproj.filters  skyData.cpp  skyData.h  skyData.txt
tool/SkyData/x64/Release/: SkyData.iobj  SkyData.ipdb
tool/SkyData/x64/Release/SkyData.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SkyData.lastbuildstate  SkyData.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
